tests/checker/diagnostics/0549_functor_opaque_result_annotation_mismatch_01.ml.infer.expected
File "0549_functor_opaque_result_annotation_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0549_functor_opaque_result_annotation_mismatch_01 is not a valid module name.

File "0549_functor_opaque_result_annotation_mismatch_01.ml", line 20, characters 14-25:
20 | let _ : int = Out_alpha.y
                   ^^^^^^^^^^^
Error: The value Out_alpha.y has type Out_alpha.u = Make_alpha(Input_alpha).u
       but an expression was expected of type int
